mock/crates/arvo/tests/ui/warm_bound_negative.stderr
error[E0425]: cannot find function `ibits` in this scope
  --> tests/ui/warm_bound_negative.rs:16:21
   |
16 |     let _: UFixed<{ ibits(33) }, { fbits(32) }, Warm> = UFixed::from_raw(0);
   |                     ^^^^^
   |
  ::: $WORKSPACE/crates/arvo-storage/src/meta_bits.rs
   |
   |         $vis struct $W(pub MetaCarrier);
   |         -------------------------------- similarly named tuple struct `IBits` defined here
   |
help: a tuple struct with a similar name exists
   |
16 -     let _: UFixed<{ ibits(33) }, { fbits(32) }, Warm> = UFixed::from_raw(0);
16 +     let _: UFixed<{ IBits(33) }, { fbits(32) }, Warm> = UFixed::from_raw(0);
   |
help: consider importing one of these functions
   |
 9 + use arvo::ibits;
   |
 9 + use arvo_storage::ibits;
   |

error[E0425]: cannot find function `fbits` in this scope
  --> tests/ui/warm_bound_negative.rs:16:36
   |
16 |     let _: UFixed<{ ibits(33) }, { fbits(32) }, Warm> = UFixed::from_raw(0);
   |                                    ^^^^^
   |
  ::: $WORKSPACE/crates/arvo-storage/src/meta_bits.rs
   |
   |         $vis struct $W(pub MetaCarrier);
   |         -------------------------------- similarly named tuple struct `FBits` defined here
   |
help: a tuple struct with a similar name exists
   |
16 -     let _: UFixed<{ ibits(33) }, { fbits(32) }, Warm> = UFixed::from_raw(0);
16 +     let _: UFixed<{ ibits(33) }, { FBits(32) }, Warm> = UFixed::from_raw(0);
   |
help: consider importing one of these functions
   |
 9 + use arvo::fbits;
   |
 9 + use arvo_storage::fbits;
   |

warning: unused imports: `FBits` and `IBits`
 --> tests/ui/warm_bound_negative.rs:9:12
  |
9 | use arvo::{FBits, IBits};
  |            ^^^^^  ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
